# NovelNexus

./: .env  .replit  INSTALL.md  OPENAI_IMPLEMENTATION.md  README.md  app.py  celery_config.py  check_env.py  dashboard.html  dependencies.txt  extract_content.py  find_manuscript.py  inspect_memory.py  main.py  monitor_progress.py  pyproject.toml  run_app.sh  show_project_content.py  test_agent_models.py  test_generation.py  test_openai.py  test_openai_direct.py  view_latest_content.py  view_manuscript.py
agents/: agent_prototype.py  chapter_planner_agent.py  chapter_writer_agent.py  character_agent.py  character_agent.py.bak  editorial_agent.py  ideation_agent.py  longform_expander.py  manuscript_agent.py  manuscript_refiner.py  outline_agent.py  plot_agent.py  research_agent.py  review_agent.py  revision_agent.py  style_priming_agent.py  world_building_agent.py  writing_agent.py
attached_assets/: coding-best-practices.mdc  project-overview.mdc  workflow.mdc
hubs/: central_hub.py
memory/: dynamic_memory.py
models/: ollama_client.py  ollama_client.py.bak  openai_client.py  openai_models.py
orchestration/: workflow.py
schemas/: character_schema.py  ideation_schema.py  manuscript_schema.py  outline_schema.py  research_schema.py  review_schema.py  world_building_schema.py  writing_schema.py
scripts/: update_agents_for_openai.py  update_openai_usage.py
templates/: 404.html  500.html  base.html  dashboard.html  generate.html  generated_text.html  index.html  layout.html  project.html
tests/: test_agent_base.py  test_dynamic_memory.py
utils/: json_utils.py  (+2 more)
(+147 files in other folders)
