[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langsmith>=0.3.42",
    "openai>=1.79.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
]
